--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,3 +1,6 @@
 @import "variables.scss";
 @import "reset.scss";
 @import "general.scss";
+@import "home.scss";
+@import "countryCard.scss";
+@import "country.scss";
